--- a/ASP.NET MVC Core/ServiceForSendingMessages/Views/Home/Index.cshtml
+++ b/ASP.NET MVC Core/ServiceForSendingMessages/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Сервис по отправке сообщений</h1>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Регистрация</button>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
