добавлено редактирование почт

--- a/ASP.NET MVC Core/ServiceForSendingMessages/Views/Home/Index.cshtml
+++ b/ASP.NET MVC Core/ServiceForSendingMessages/Views/Home/Index.cshtml
@@ -4,6 +4,13 @@
 
 <div class="text-center">
     <h1 class="display-4">Сервис по отправке сообщений</h1>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Регистрация</button>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <button class="w-40 btn btn-lg btn-primary" type="submit">Отправить отчёт </button>
+    <p> Как часто отправлять отчёт <input type="text" size="40"></p>
+    <p><button class="w-40 btn btn-lg btn-primary" type="submit">Применить</button></p>
+    @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
+    
+    
+
+    
+
 </div>
